# Phosphene_ashes

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  out  outShape  outVdb  vcpkg.json
scene/: fractalTest.json  matTest.json  test.json  test2.json  testCoco.json  testShape.json  testVdb.json  testVdb2.json
shaders/: gBuffer.rgen  gBuffer.rmiss  gBufferCommon.glsl  gBufferMesh.rchit  gBufferShape.rchit  gBufferVdb.rchit  hostDevice.h  hostDevicePicker.h  hostDeviceVdb.h  illumination.glsl  mandelbulb.rint  marching.glsl  marchingBasicSD.glsl  menger.rint  pathcommon.glsl  pathtrace.rgen  pathtrace.rmiss  pathtrace2.rgen  pathtraceMesh.rchit  pathtraceShape.rchit  pathtraceVdb.rchit  post.frag  post.vert  rand.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceMesh.rchit  raytraceMeshShadow.rchit  raytraceShadow.rchit  raytraceShape.rchit  raytraceShapeColor.rchit  raytraceShapeNormal.rchit  raytraceShapeShadow.rchit  raytraceVdbShadow.rchit  sphere.rint  wavefront.glsl
shaders/helper/: illumination.glsl  pathIllumination.glsl
shaders/marching/: box.rint  mandelbox.rint  mandelbulb.rint  marching.glsl  marchingBasicSD.glsl  marchingBasicShape.glsl  marchingDefault.glsl  marchingFold.glsl  menger.rint  test.rint  test2.rint
shaders/vdb/: PNanoVDB.h  marching.glsl  vdb.rint
src/: allocator.cpp  camera.cpp  camera.hpp  command.cpp  command.hpp  main.cpp  phosGui.cpp  phosHelper.cpp  phosHelper.hpp  phosStartVk.cpp  phosStartVk.hpp  phosphene.cpp  phosphene.hpp  phospheneCallback.cpp  phosphenePipeline.cpp  postPipeline.cpp  rtBuilder.cpp  rtBuilder.hpp  rtTest.cpp  rtTest.hpp  swapchain.cpp  vkImpl.cpp  vkImpl.hpp
src/backend/: phosStartVk.cpp  phosStartVk.hpp  postPipeline.cpp  swapchain.cpp  vkImpl.cpp  vkImpl.hpp
src/gui/: phosGui.cpp  phosGui.hpp
src/helper/: allocator.cpp  allocator.hpp  command.cpp  command.hpp  extensions.cpp  extensions.hpp  phosHelper.cpp  phosHelper.hpp  phosNamedObject.hpp
src/raytracing/: pipeline.cpp  pipelineBuilder.cpp  pipelineBuilder.hpp  rayPicker.cpp  rayPicker.hpp  rtBuilder.cpp  rtBuilder.hpp  rtTest.cpp  rtTest.hpp  sceneBuilder.cpp  sceneBuilder.hpp
src/sceneLoader/: objLoader.cpp  objLoader.hpp  scene.cpp  scene.hpp  sceneLoader.cpp  sceneLoader.hpp  vdbLoader.cpp  vdbLoader.hpp
